# home-framework

./: .editorconfig  .gitignore  .home-secret-scan-allowlist  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  privacy-model.md  publishing.md  release-checklist.md
docs/adr/: 0001-independent-public-repository.md  0002-authority-files-over-chat-history.md  0003-human-review-required.md  0004-generated-files-are-disposable.md  0005-workspace-manifest.md  0006-machine-readable-export-metadata.md  0007-generated-exports-are-untracked.md
docs/guides/: daily-context-management.zh-CN.md  zero-tech-user-guide.zh-CN.md
docs/releases/: v0.1.0-alpha.2-freeze.md  v0.1.0-alpha.4-freeze.md
docs/superpowers/specs/: 2026-07-20-workspace-lifecycle-design.md
examples/fictional-assistant/: .gitignore  home.yaml
examples/fictional-assistant/candidates/: wording.yaml
examples/fictional-assistant/handoffs/: project.yaml
examples/fictional-assistant/sources/core/: communication.yaml  review.yaml
examples/fictional-assistant/sources/current/: future.yaml  release.yaml
schemas/: candidate.schema.json  core.schema.json  current.schema.json  export-metadata.schema.json  handoff.schema.json  workspace.schema.json
scripts/: check.py  check_schema_drift.py  export_schemas.py  scan_secrets.py
src/home_framework/: __init__.py  cli.py  compiler.py  doctor.py  export_metadata.py  initializer.py  models.py  path_safety.py  quality.py  renderer.py  repository.py  security.py
tests/: test_cli.py  test_compiler.py  test_doctor.py  test_export_metadata.py  test_initializer.py  test_models.py  test_path_safety.py  test_quality_config.py  test_repository.py  test_schema_export.py  test_security.py  test_version.py  test_workspace_models.py  test_workspace_repository.py
