[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "home-framework"
dynamic = ["version"]
description = "A local-first framework for deterministic human-AI context handoffs."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Yuki", email = "293018124+yukilain007@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "packaging>=24,<27",
  "pydantic>=2.10,<3",
  "PyYAML>=6.0.2,<7",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pre-commit>=4,<5",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
  "types-PyYAML>=6.0.12,<7",
]

[project.scripts]
home = "home_framework.cli:app"

[project.urls]
Homepage = "https://github.com/yukilain007/home-framework"
Repository = "https://github.com/yukilain007/home-framework"
Issues = "https://github.com/yukilain007/home-framework/issues"

[tool.hatch.version]
path = "src/home_framework/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/docs/superpowers",
]

[tool.hatch.build.targets.wheel]
packages = ["src/home_framework"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "yaml"
disallow_any_unimported = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
